--- a/2.html
+++ b/2.html
@@ -20,7 +20,7 @@
             <div id="left-col" class="col-4">
                 <br>
                 <br>
-                <h2><span class="letters"><a class="cletters" href="index2.html">letters</a> </span></h2>
+                <h2><span class="letters"><a class="cletters" href="index.html">letters</a> </span></h2>
 
                 <br>
                 <img class="testpic" src="2.jpg">
